[gd_scene load_steps=22 format=3 uid="uid://cuuew2v4inm7k"]

[ext_resource type="Script" uid="uid://cir1i2gbr8pjh" path="res://scripts/dataset_tab.gd" id="1_hsuaq"]
[ext_resource type="Theme" uid="uid://cx365ld2mgjne" path="res://resources/theme_base.tres" id="2_fn1yt"]
[ext_resource type="Script" uid="uid://cjgpy062bsa25" path="res://scripts/loader.gd" id="2_hsuaq"]
[ext_resource type="Shader" uid="uid://q0g5c44a6f7r" path="res://shaders/block.gdshader" id="5_rckiu"]
[ext_resource type="Theme" uid="uid://74kwx22ikciq" path="res://resources/theme_headers.tres" id="6_mbiqq"]
[ext_resource type="Script" uid="uid://bjncugq5805ty" path="res://scripts/label_auto_resize.gd" id="7_q5lcu"]
[ext_resource type="PackedScene" uid="uid://wd63efdi6bdn" path="res://scenes/BaseBComponent.tscn" id="8_jf34i"]
[ext_resource type="Script" uid="uid://cd1e7nh0qym86" path="res://scripts/procedural_nodes22.gd" id="9_3m244"]
[ext_resource type="Material" uid="uid://jm8oyahk342s" path="res://resources/context_menu.tres" id="9_b545l"]
[ext_resource type="Script" uid="uid://c8207sv1hbg2e" path="res://scripts/unr.gd" id="10_8ivn3"]
[ext_resource type="Script" uid="uid://dx40hpbce8w60" path="res://scripts/button_config.gd" id="11_j7vbt"]
[ext_resource type="Material" uid="uid://b32bkwpidhiyp" path="res://resources/font_alphamult.tres" id="13_3m244"]
[ext_resource type="Material" uid="uid://dhpvvvjn14qxk" path="res://resources/fg_block.tres" id="13_51ak0"]
[ext_resource type="Script" uid="uid://cpdndxaic5xca" path="res://scripts/virtualt.gd" id="13_bwfib"]
[ext_resource type="Theme" uid="uid://cxe1714v2p0a1" path="res://resources/theme.tres" id="14_bwfib"]
[ext_resource type="Texture2D" uid="uid://cc0gwf51gfory" path="res://game_assets/icons/hide.png" id="14_empbn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_epnia"]
shader = ExtResource("5_rckiu")
shader_parameter/shape = 0
shader_parameter/mult_tuning = Color(1, 1, 1, 1)
shader_parameter/color_mult = Color(1, 1, 1, 1)
shader_parameter/smoothness = 20.0
shader_parameter/corner_radius = 0.0
shader_parameter/blurred_background = true
shader_parameter/outline_width = 1.688
shader_parameter/mult = 1.5
shader_parameter/blur_level = 5.07
shader_parameter/gaussian_mix = 1.0
shader_parameter/gaussian_step = 1.0
shader_parameter/use_bg = true

[sub_resource type="Resource" id="Resource_5x1c3"]
script = ExtResource("11_j7vbt")
hover_color = Color(1.3, 1.1, 1.1, 1)
hover_mult = 1.15
_hover_scale = 1.02
press_color = Color(1.1, 0.9, 0.9, 1)
_press_scale = 0.97
animation_speed = 1.951
animation_decay = 4.564
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_uce8f"]
script = ExtResource("11_j7vbt")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.2
_hover_scale = 1.05
press_color = Color(0.84, 0.84, 0.84, 1)
_press_scale = 0.98
animation_speed = 2.657
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_n8ca6"]
script = ExtResource("11_j7vbt")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.05
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 0.98
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsuaq"]
content_margin_left = 8.0
content_margin_top = 29.0
content_margin_bottom = 8.0
bg_color = Color(0.12, 0.12, 0.12, 1)

[node name="Control" type="Node2D" node_paths=PackedStringArray("camera")]
script = ExtResource("1_hsuaq")
window_name = "ds"
camera = NodePath("Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -9

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.12, 1)

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("table")]
layout_mode = 3
anchors_preset = 0
offset_right = 1149.0
offset_bottom = 645.0
script = ExtResource("2_hsuaq")
table = NodePath("CodeEdit")

[node name="scenes" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_epnia")
instance_shader_parameters/corner_radius_width_add = Vector2(10, 0.3)
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.6313726, 0.6313726, 0.6313726, 1)
instance_shader_parameters/tuning = Color(0.36078432, 0.36078432, 0.36078432, 1)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 209.0
grow_vertical = 2

[node name="Label" type="Label" parent="Control/scenes"]
layout_mode = 0
offset_left = 19.0
offset_top = 16.000002
offset_right = 127.72238
offset_bottom = 59.0
scale = Vector2(0.6436957, 0.6436957)
theme = ExtResource("6_mbiqq")
text = "Datasets"
script = ExtResource("7_q5lcu")
metadata/_custom_type_script = "uid://bjncugq5805ty"

[node name="list" parent="Control/scenes" instance=ExtResource("8_jf34i")]
material = ExtResource("9_b545l")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(1, 1, 1, 0)
instance_shader_parameters/tuning = Color(0.509804, 0.509804, 0.509804, 0.439216)
layout_mode = 0
offset_left = 5.0
offset_top = 38.0
offset_right = 362.7778
offset_bottom = 47.333332
scale = Vector2(0.9, 0.9)
color = Color(1, 1, 1, 0)
script = ExtResource("10_8ivn3")
naming = "list_unroll2"
base_scale_x = 0.0
text_color = Color(0, 0, 0, 1)
base_size = Vector2(357.7778, 9.333332)
static_mode = true
_scroll_container = false
arrangement_padding = Vector2(11, 5)
mouse_open = false
menu_name = &"list2"
dynamic_size = true
max_size = 210

[node name="name" parent="Control/scenes/list" instance=ExtResource("8_jf34i")]
z_index = 2
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.43137255, 0.5882353, 0.9019608, 1)
instance_shader_parameters/tuning = Color(0.26400003, 0.3593334, 0.55, 0.5647059)
layout_mode = 0
offset_left = 200.0
offset_top = 221.333
offset_right = 436.0
offset_bottom = 262.333
pivot_offset = Vector2(118, 20.500008)
button_type = 1
placeholder = true
auto_trim_text = true
text = "Hello!!"
text_alignment = Vector2(-1, 0)
text_offset = Vector2(15, 0)
base_size = Vector2(236, 41.000015)
alignment = Vector2(0.5, 0.5)
mouse_open = false
config = SubResource("Resource_5x1c3")

[node name="ProceduralNodes" type="Node" parent="Control/scenes/list" node_paths=PackedStringArray("instance")]
script = ExtResource("9_3m244")
instance = NodePath("../name")
metadata/_custom_type_script = "uid://cppqde4187p8n"

[node name="9" parent="Control/scenes" instance=ExtResource("8_jf34i")]
self_modulate = Color(1, 1, 1, 0)
material = ExtResource("13_51ak0")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.94, 0.94, 0.94, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.407843)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -37.0
offset_top = 11.0
offset_right = -2.1955566
offset_bottom = 43.624138
grow_horizontal = 0
scale = Vector2(0.798255, 0.798255)
pivot_offset = Vector2(17.402222, 16.312069)
color = Color(0.49019608, 0.627451, 0.83137256, 1)
button_type = 1
top = true
hint = &"layer"
base_size = Vector2(34.804443, 32.624138)
alignment = Vector2(0.5, 0.5)
config = SubResource("Resource_uce8f")

[node name="i" type="TextureRect" parent="Control/scenes/9"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.000002
scale = Vector2(1.3652097, 1.3652097)
texture = ExtResource("14_empbn")

[node name="plus" parent="Control/scenes" instance=ExtResource("8_jf34i")]
process_mode = 3
z_index = 9
instance_shader_parameters/corner_radius_width_add = Vector2(-10.835, 0)
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.67058825)
layout_mode = 0
offset_left = 106.0
offset_top = 18.859617
offset_right = 122.7193
offset_bottom = 35.522972
scale = Vector2(1.3004386, 1.3004386)
pivot_offset = Vector2(8.35965, 8.331677)
mouse_filter = 1
color = Color(0.49, 0.49, 0.49, 1)
button_type = 1
top = true
base_scale_x = 0.45
resize_after = 6
text = "+"
text_offset = Vector2(0, -1)
base_size = Vector2(16.7193, 16.663355)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_n8ca6")

[node name="view" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_epnia")
instance_shader_parameters/corner_radius_width_add = Vector2(10, 0.3)
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.63, 0.63, 0.63, 1)
instance_shader_parameters/tuning = Color(0.36, 0.36, 0.36, 1)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -389.0
offset_right = 71.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="Control/view"]
self_modulate = Color(0.45, 0.45, 0.45, 1)
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 242.0
offset_bottom = 54.0
scale = Vector2(0.77261, 0.77261)
theme = ExtResource("2_fn1yt")
text = "Preview"
script = ExtResource("7_q5lcu")
padding = Vector2(11, 4)

[node name="CodeEdit" type="Control" parent="Control" node_paths=PackedStringArray("vscrollbar", "hscrollbar")]
z_index = -1
anchors_preset = 0
offset_left = 188.5
offset_right = 913.0
offset_bottom = 558.0
script = ExtResource("13_bwfib")
vscrollbar = NodePath("VScrollBar")
spawn_delay_threshold = 7000.0
content_margin = Vector4(0, 0, 0, 0)
column_ratios = PackedFloat32Array(0.333, 0.333, 0.333)
hscrollbar = NodePath("HScrollBar")
column_width_mode = 0
max_total_width_scale = 1.3
min_total_column_ratio = 0.30000000000000004
min_column_width = 10.0
min_vgrabber_ratio = 0.04

[node name="VScrollBar" type="VScrollBar" parent="Control/CodeEdit"]
z_index = 90
z_as_relative = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2

[node name="HScrollBar" type="HScrollBar" parent="Control/CodeEdit"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = -11.0
grow_horizontal = 2
grow_vertical = 0

[node name="console" type="RichTextLabel" parent="Control"]
material = ExtResource("13_3m244")
instance_shader_parameters/extents = Vector4(1, 900, 0, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 188.5
offset_top = -81.0
offset_right = 188.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("14_bwfib")
theme_override_font_sizes/normal_font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_hsuaq")
text = "heyyyy"

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(2.1270475, 2.1270475)
anchor_mode = 0

[connection signal="child_button_release" from="Control/scenes/list" to="." method="_on_list_child_button_release"]
[connection signal="released" from="Control/scenes/9" to="." method="_on__released"]
[connection signal="released" from="Control/scenes/plus" to="." method="_on_plus_released"]
